maven plugin fix