@@ -141,6 +141,7 @@
                         <buildArg>
                             --add-opens=java.base/java.time=ALL-UNNAMED
                         </buildArg>
+                        <buildArg>--verbose</buildArg>
                     </buildArgs>
                     <runtimeArgs>
                         <runtimeArg>-H:AdditionalRuntimeOptions=--add-opens=java.base/java.time=ALL-UNNAMED</runtimeArg>
@@ -151,11 +152,11 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <!-- this works for normal (not graalvm native) images -->
                     <image>
                         <env>
                             <BPE_DELIM_JAVA_TOOL_OPTIONS xml:space="preserve"> </BPE_DELIM_JAVA_TOOL_OPTIONS>
                             <BPE_APPEND_JAVA_TOOL_OPTIONS>--add-opens=java.base/java.time=ALL-UNNAMED</BPE_APPEND_JAVA_TOOL_OPTIONS>
+                            <BP_NATIVE_IMAGE_BUILD_ARGUMENTS>--add-opens=java.base/java.time=ALL-UNNAMED</BP_NATIVE_IMAGE_BUILD_ARGUMENTS>
                         </env>
                     </image>
                     <excludes>
